[project]
name = "leetcode"
version = "0.1.0"
description = "My solutions to LeetCode problems."
authors = [
    {name = "abbebusonii"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.4.0,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"